adding careers section

--- a/index.html
+++ b/index.html
@@ -384,8 +384,7 @@
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
                 <div id="userInterfase" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img1.jpg" alt="Image description">
-
+                  <img class="img-fluid g-mb-30" src="assets/img/background/workingatskyworkz.jpg" alt="Image description">
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
                       <div class="media g-parent g-mb-15">
@@ -441,7 +440,6 @@
                 </div>
 
                 <div id="identityAndBranding" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img2.jpg" alt="Image description">
 
                   <div class="row">
                     <div class="col-md-6 g-mb-20 g-mb-0--md">
@@ -453,11 +451,11 @@
                         </div>
 
                         <div class="media-body align-self-center">
-                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Discuss with client</h3>
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Cloud Engineer</h3>
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">Quisque rhoncus euismod pulvinar. Nulla non arcu at lectus. Vestibulum fringilla velit rhoncus euismod rhoncus turpis. Donec vel pharetra tellus. Sed non est lacus.</p>
+                      <p class="g-line-height-1_4 mb-0">You are passionate about infrastructure. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the public cloud and through you become as passionate as you for building cloud native applications.</p>
                     </div>
 
                     <div class="col-md-6">
@@ -469,18 +467,50 @@
                         </div>
 
                         <div class="media-body align-self-center">
-                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Wireframe</h3>
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Cloud Developer</h3>
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">Cras sit amet varius velit. Maecenas porta condimentum tortor at sagittis. Cum sociis natoque penatibus et magnis dis. Donec vel pharetra tellus. Sed non est lacus.</p>
+                      <p class="g-line-height-1_4 mb-0">You are a seasoned craftsman with passion for programming. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the cloud and through you become as passionate as you are about building cloud native applications.</p>
                     </div>
                   </div>
                 </div>
 
                 <div id="webDesign" class="tab-pane fade" role="tabpanel">
-                  <img class="img-fluid g-mb-30" src="assets/img-temp/900x372/img3.jpg" alt="Image description">
-                  <p class="g-line-height-1_4 mb-0">Sed feugiat porttitor nunc, non dignissim ipsum vestibulum in. Donec in blandit dolor. Vivamus a fringilla lorem, vel faucibus ante. Nunc ullamcorper, justo a iaculis elementum, enim orci viverra eros, fringilla porttitor lorem eros vel odio.</p>
+                  <p class="g-line-height-1_4 mb-0"> + A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
+                    <br>
+                    <br>
+                      + Projects that match with what you want. Because we take the time and attention to find something that fits for you, and not any sales targets.
+                      <br>
+                      <br>
+                      + A culture of continuous learning. We understand that this is the primary drive and motivation for people with passion for technology. With meetups, brown bag sessions and Campus Fridays.
+                      <br>
+                      <br>
+                      + A work environment where your vision counts and can become part of the company and its culture. Where personal input is valued and rewarded (actually it’s a must). Particularly when you are here from day one.
+                      <br>
+                      <br>
+                      + The ambition to become known as the Authority (on Data or Cloud) where Cloud Dev and Cloud Ops become one DevOps. Become a certified cloud ninja master devops and let us praise you for it.
+                      <br>
+                      <br>
+                      + The best manager duo since Pinky & the Brain, Kirk and Spock, Mulder and Scully. With the right technical and business background to understand the passion and drive of software developers and engineers.
+                      <br>
+                      <br>
+                      + Excellent training budget of €3000, - and 5 days/year. We trust that you are the best person to decide yourself what you need to grow.
+                      <br>
+                      <br>
+                      + You want to speak at international conferences? We’ll support you where we can, and here’s €2000, - training budget extra if you do.
+                      <br>
+                      <br>
+                      A laptop of your choice. No, it does not have to be a Dell, HP or Lenovo. You tell us what to buy and we’ll take care of it.
+                      <br>
+                      <br>
+                      + A company car or travel expenses.
+                      <br>
+                      <br>
+                      + More primary and secondary benefits with an excellent bonus scheme.
+                      <br>
+                      <br>
+                      + Fun. Sometimes it's that simple.</p>
                 </div>
               </div>
               <!-- End Tab panes -->
