refining roles section

--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@
                   data-tabs-mobile-type="accordion"
                   data-btn-classes="btn btn-md btn-block text-uppercase u-btn-outline-primary g-font-weight-700 rounded-0 g-mb-20">
                 <li class="nav-item g-mb-10">
-                  <a class="nav-link active" data-toggle="tab" href="#userInterfase" role="tab">What will you be doing?</a>
+                  <a class="nav-link active" data-toggle="tab" href="#whatWillYouBeDoing" role="tab">What will you be doing?</a>
                 </li>
                 <li class="nav-item g-mb-10">
-                  <a class="nav-link" data-toggle="tab" href="#identityAndBranding" role="tab">Roles</a>
+                  <a class="nav-link" data-toggle="tab" href="#roles" role="tab">Roles</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="tab" href="#webDesign" role="tab">Our offer </a>
+                  <a class="nav-link" data-toggle="tab" href="#ourOffer" role="tab">Our offer </a>
                 </li>
               </ul>
               <!-- End Nav tabs -->
@@ -383,7 +383,7 @@
             <div class="col-md-9">
               <!-- Tab panes -->
               <div id="workProcessTabs" class="tab-content">
-                <div id="userInterfase" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
+                <div id="whatWillYouBeDoing" class="tab-pane fade g-mb-20 g-mb-0--md show active" role="tabpanel">
                   <img class="img-fluid g-mb-30" src="assets/img/background/workingatskyworkz.jpg" alt="Image description">
                   <div class="row">
                     <div class="col-md-4 g-mb-20 g-mb-0--md">
@@ -439,14 +439,14 @@
                   </div>
                 </div>
 
-                <div id="identityAndBranding" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
+                <div id="roles" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
 
                   <div class="row">
                     <div class="col-md-6 g-mb-20 g-mb-0--md">
                       <div class="media g-parent g-mb-15">
                         <div class="d-flex align-self-center g-mr-15">
                           <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
-                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">1</i>
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">⊙</i>
                           </span>
                         </div>
 
@@ -455,14 +455,45 @@
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">You are passionate about infrastructure. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the public cloud and through you become as passionate as you for building cloud native applications.</p>
-                    </div>
+                      <p class="g-line-height-1_4 mb-0">You are passionate about infrastructure. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the public cloud and through you become as passionate as you for building cloud native applications.
+                          <br>
+                          <br>
+                          You are a polyglot developer/scripter and would almost call yourself programmer: Bash, Python, Go, Perl(just joking, no not Perl).
+                          <br>
+                          <br>
+                          There is no infrastructure that has not been coded, no service deployment that has not been automated.
+                          <br>
+                          <br>
+                          Asking for a strong agile background is superfluous for you. Without agile there is no DevOps.
+                          <br>
+                          <br>
+                          You did:
+                          <br>
+                          Deploy applications with infrastructure as code monitoring and cloud native CI/CD pipelines with AWS CodeCommit, CodeBuild, Elastic Beanstalk, CodePipeline, CloudFormation or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Understand, implement, and automate security controls, secure network segmenting and secrets management in a dynamic (multicloud) environment with AWS IAM, KMS, EC2 Systems Manager, Cognito, SAM, CloudTrail, X-Ray or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Manage, monitor and finetune applications optimally. 
+                          <br>
+                          <br>
+                          Wait. There is more?
+                          <br>
+                          <br>
+                          Experience in Site Reliability Engineering.
+                          <br>
+                          AWS / GCP/ Microsoft Cloud certifications.
+                          <br>
+                          Awesome, we are speechless.
+                        </p>
+                        </div>
 
                     <div class="col-md-6">
                       <div class="media g-parent g-mb-15">
                         <div class="d-flex align-self-center g-mr-15">
                           <span class="u-icon-v2 g-width-40 g-height-40 g-color-gray-dark-v4 g-brd-4 g-theme-brd-gray-dark-v3 g-brd-primary--parent-hover rounded-circle">
-                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">2</i>
+                            <i class="g-font-style-normal g-font-weight-700 g-font-size-default g-color-primary">⊙</i>
                           </span>
                         </div>
 
@@ -471,12 +502,43 @@
                         </div>
                       </div>
 
-                      <p class="g-line-height-1_4 mb-0">You are a seasoned craftsman with passion for programming. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the cloud and through you become as passionate as you are about building cloud native applications.</p>
+                      <p class="g-line-height-1_4 mb-0">You are a seasoned craftsman with passion for programming. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the cloud and through you become as passionate as you are about building cloud native applications.
+                          <br>
+                          <br>
+                          You are a polyglot developer/scripter and would almost call yourself programmer: Bash, Python, Go, Perl(just joking, no not Perl).
+                          <br>
+                          <br>
+                          There is no infrastructure that has not been coded, no service deployment that has not been automated.
+                          <br>
+                          <br>
+                          Asking for a strong agile background is superfluous for you. Without agile there is no DevOps.
+                          <br>
+                          <br>
+                          You did:
+                          <br>
+                          Deploy applications with infrastructure as code monitoring and cloud native CI/CD pipelines with AWS CodeCommit, CodeBuild, Elastic Beanstalk, CodePipeline, CloudFormation or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Understand, implement, and automate security controls, secure network segmenting and secrets management in a dynamic (multicloud) environment with AWS IAM, KMS, EC2 Systems Manager, Cognito, SAM, CloudTrail, X-Ray or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Manage, monitor and finetune applications optimally. 
+                          <br>
+                          <br>
+                          Wait. There is more?
+                          <br>
+                          <br>
+                          Experience in Site Reliability Engineering.
+                          <br>
+                          AWS / GCP/ Microsoft Cloud certifications.
+                          <br>
+                          Awesome, we are speechless.
+                      </p>
                     </div>
                   </div>
                 </div>
 
-                <div id="webDesign" class="tab-pane fade" role="tabpanel">
+                <div id="ourOffer" class="tab-pane fade" role="tabpanel">
                   <p class="g-line-height-1_4 mb-0"> + A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
                     <br>
                     <br>
