--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="../../favicon.ico">
 
     <!-- Google Fonts -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:300,400,500,700,900" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open=Sans:300,400,600,700,800|Roboto:300,400,500,700,900" rel="stylesheet">
 
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
@@ -498,14 +498,14 @@
                         </div>
 
                         <div class="media-body align-self-center">
-                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Cloud Developer</h3>
+                          <h3 class="h6 text-uppercase g-font-weight-700 g-font-secondary g-color-white mb-0">Cloud Native Developer</h3>
                         </div>
                       </div>
 
                       <p class="g-line-height-1_4 mb-0">You are a seasoned craftsman with passion for programming. And able to communicate and coach the advantages of the cloud to both business, agile teams in DevOps cloud development. They get that you get the cloud and through you become as passionate as you are about building cloud native applications.
                           <br>
                           <br>
-                          You are a polyglot developer/scripter and would almost call yourself programmer: Bash, Python, Go, Perl(just joking, no not Perl).
+                          You are a polyglot Programmer (Java, Scala, Javacript/Typescript, Go, Python) and you know the relevant ecosystem needed for building highly scalable enterprise applications like no other.  
                           <br>
                           <br>
                           There is no infrastructure that has not been coded, no service deployment that has not been automated.
@@ -516,63 +516,63 @@
                           <br>
                           You did:
                           <br>
+                          Develop web applications using cloud containers or serverless architectures with for example AWS EC2, EKS, IAM, S3, Route S3, Elasticache or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Design and develop serverless architectures with AWS Lambda, Dynamo DB, Cognito or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Integrate and decouple applications with for example SQS, SNS, Kinesis or similar services on Google or Azure.
+                          <br>
+                          <br>
+                          Not enough? You also have:
+                          <br>
+                          <br>
                           Deploy applications with infrastructure as code monitoring and cloud native CI/CD pipelines with AWS CodeCommit, CodeBuild, Elastic Beanstalk, CodePipeline, CloudFormation or similar services on Google or Azure.
-                          <br>
-                          <br>
-                          Understand, implement, and automate security controls, secure network segmenting and secrets management in a dynamic (multicloud) environment with AWS IAM, KMS, EC2 Systems Manager, Cognito, SAM, CloudTrail, X-Ray or similar services on Google or Azure.
-                          <br>
-                          <br>
-                          Manage, monitor and finetune applications optimally. 
-                          <br>
-                          <br>
-                          Wait. There is more?
-                          <br>
-                          <br>
-                          Experience in Site Reliability Engineering.
                           <br>
                           AWS / GCP/ Microsoft Cloud certifications.
                           <br>
-                          Awesome, we are speechless.
+                          Awesome! We are speechless! Again.
                       </p>
                     </div>
                   </div>
                 </div>
 
                 <div id="ourOffer" class="tab-pane fade" role="tabpanel">
-                  <p class="g-line-height-1_4 mb-0"> + A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
+                  <p class="g-line-height-1_4 mb-0"> • A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
                     <br>
                     <br>
-                      + Projects that match with what you want. Because we take the time and attention to find something that fits for you, and not any sales targets.
+                      • Projects that match with what you want. Because we take the time and attention to find something that fits for you, and not any sales targets.
                       <br>
                       <br>
-                      + A culture of continuous learning. We understand that this is the primary drive and motivation for people with passion for technology. With meetups, brown bag sessions and Campus Fridays.
+                      • A culture of continuous learning. We understand that this is the primary drive and motivation for people with passion for technology. With meetups, brown bag sessions and Campus Fridays.
                       <br>
                       <br>
-                      + A work environment where your vision counts and can become part of the company and its culture. Where personal input is valued and rewarded (actually it’s a must). Particularly when you are here from day one.
+                      • A work environment where your vision counts and can become part of the company and its culture. Where personal input is valued and rewarded (actually it’s a must). Particularly when you are here from day one.
                       <br>
                       <br>
-                      + The ambition to become known as the Authority (on Data or Cloud) where Cloud Dev and Cloud Ops become one DevOps. Become a certified cloud ninja master devops and let us praise you for it.
+                      • The ambition to become known as the Authority (on Data or Cloud) where Cloud Dev and Cloud Ops become one DevOps. Become a certified cloud ninja master devops and let us praise you for it.
                       <br>
                       <br>
-                      + The best manager duo since Pinky & the Brain, Kirk and Spock, Mulder and Scully. With the right technical and business background to understand the passion and drive of software developers and engineers.
+                      • The best manager duo since Pinky & the Brain, Kirk and Spock, Mulder and Scully. With the right technical and business background to understand the passion and drive of software developers and engineers.
                       <br>
                       <br>
-                      + Excellent training budget of €3000, - and 5 days/year. We trust that you are the best person to decide yourself what you need to grow.
+                      • Excellent training budget of €3000, - and 5 days/year. We trust that you are the best person to decide yourself what you need to grow.
                       <br>
                       <br>
-                      + You want to speak at international conferences? We’ll support you where we can, and here’s €2000, - training budget extra if you do.
+                      • You want to speak at international conferences? We’ll support you where we can, and here’s €2000, - training budget extra if you do.
                       <br>
                       <br>
                       A laptop of your choice. No, it does not have to be a Dell, HP or Lenovo. You tell us what to buy and we’ll take care of it.
                       <br>
                       <br>
-                      + A company car or travel expenses.
+                      • A company car or travel expenses.
                       <br>
                       <br>
-                      + More primary and secondary benefits with an excellent bonus scheme.
+                      • More primary and secondary benefits with an excellent bonus scheme.
                       <br>
                       <br>
-                      + Fun. Sometimes it's that simple.</p>
+                      • Fun. Sometimes it's that simple.</p>
                 </div>
               </div>
               <!-- End Tab panes -->
