--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
                 </div>
 
                 <div id="roles" class="tab-pane fade g-mb-20 g-mb-0--md" role="tabpanel">
+                    <img class="img-fluid g-mb-30" src="assets/img/background/cloudengineer.jpg" alt="Image description">
 
                   <div class="row">
                     <div class="col-md-6 g-mb-20 g-mb-0--md">
@@ -484,6 +485,7 @@
                           Experience in Site Reliability Engineering.
                           <br>
                           AWS / GCP/ Microsoft Cloud certifications.
+                          <br>
                           <br>
                           Awesome, we are speechless.
                         </p>
@@ -532,6 +534,7 @@
                           <br>
                           AWS / GCP/ Microsoft Cloud certifications.
                           <br>
+                          <br>
                           Awesome! We are speechless! Again.
                       </p>
                     </div>
@@ -539,6 +542,7 @@
                 </div>
 
                 <div id="ourOffer" class="tab-pane fade" role="tabpanel">
+                    <img class="img-fluid g-mb-30" src="assets/img/background/together.jpg" alt="Image description">
                   <p class="g-line-height-1_4 mb-0"> • A family like environment. We understand that people don’t want to be assets but a culture where attention and care for everyone is the top priority.
                     <br>
                     <br>
