--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a href="#services" class="nav-link p-0">Services</a>
                   </li>
                   <li class="nav-item g-mx-30--lg g-mb-7 g-mb-0--lg">
-                    <a href="#!" class="nav-link p-0">Career</a>
+                    <a href="#career" class="nav-link p-0">Career</a>
                   </li>
                   <li class="nav-item g-ml-30--lg">
                     <a href="#contact" class="nav-link p-0">Contact</a>
@@ -351,10 +351,10 @@
       <!-- End Section Content -->
 
       <!-- Section Content -->
-      <section id="Career" class="g-theme-bg-blue-dark-v1 g-py-100">
+      <section id="career" class="g-theme-bg-blue-dark-v1 g-py-100">
         <div class="container text-center u-bg-overlay__inner g-max-width-770 g-mb-30 g-mb-70--md">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-30">
-            <h3 class="g-font-weight-700 g-font-size-12 g-color-primary g-mb-20">CAREER</h3>
+            <h3 class="g-font-weight-700 g-font-size-12 g-color-primary g-mb-20">Career</h3>
             <h2 class="u-heading-v2__title g-line-height-1 g-letter-spacing-2 g-font-weight-700 g-font-size-30 g-font-size-40--md g-color-white mb-0">WORKING AT SKYWORKZ</h2>
           </div>
         </div>
