adding team members

--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Technical supervisor</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">James Novel</h2>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Director</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Martin Weidner</h2>
                   </div>
                   <!-- End Figure Info -->
 
@@ -672,8 +672,8 @@
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Technical director</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Catrina Wearner</h2>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Director</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Bas van der Zwet</h2>
                   </div>
                   <!-- End Figure Info -->
 
@@ -709,8 +709,8 @@
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Technical manager</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Fiona Biloti</h2>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Developer</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Sven Rienstra</h2>
                   </div>
                   <!-- End Figure Info -->
 
@@ -746,8 +746,8 @@
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Head of secretory</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Samuel Calven</h2>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Engineer</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Sander Knape</h2>
                   </div>
                   <!-- End Figure Info -->
 
@@ -783,8 +783,8 @@
 
                   <!-- Figure Info -->
                   <div class="text-uppercase g-mb-20">
-                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Human resources manager</h4>
-                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">George Manuel</h2>
+                    <h4 class="g-letter-spacing-2 g-font-size-11 g-theme-color-gray-dark-v3 g-mb-10">Cloud Engineer</h4>
+                    <h2 class="g-font-weight-600 g-font-size-18 g-color-white">Lyle Henkeman</h2>
                   </div>
                   <!-- End Figure Info -->
 
